# KITC

./: CMakeLists.txt  README.md  conanfile.txt
source/: main.cpp  quad.h  stblibs.cpp
source/GUI/: GUI.h  UIRenderer.h
source/components/: abstract_data_component.h  data_component.h  material_component.h  quad_component.h  texture_component.h
source/libs/ecs/: component_pool.h  component_pool_hash_map.h  entity_component_hash_map.h  entity_component_map.h  system.h
source/libs/input/: action.h  input.h  input_identifier.h  input_provider.h
source/libs/loading/: image_loader.h  loader.h  resource.h
source/libs/math/: floating_point.h  random.h
source/libs/pump/: pump.h  pumper.h
source/libs/rendering/: display.h  renderer.h  resource_registry.h  scene.h
source/libs/stb/: stb_macro.cpp
source/libs/tracker/: Tracker.h
source/rendering/sdl2/: sdl_renderer.h  sdl_resource_registry.h
source/systems/: QuadRenderSystem.h
